--- a/03-posicionamento-elementos/produtos.css
+++ b/03-posicionamento-elementos/produtos.css
@@ -1,11 +1,18 @@
 header {
     background-color: #BBBBBB;
+    padding: 20px 0;
+}
+
+.caixa {
+    width: 940px;
+    position: relative;
+    margin: 0 auto;
 }
 
 nav {
     position: absolute;
-    top: 100px;
-    right: 100px;
+    top: 110px;
+    right: 0px;
 }
 
 nav li{
