--- a/style.css
+++ b/style.css
@@ -1,44 +1,91 @@
-#banner {
-    width: 100%;
+header {
+    background-color: #BBBBBB;
+    padding: 20px 0;
 }
 
-.principal {
-    background-color: #CCCCCC;
-    padding: 30px;
+.caixa {
+    width: 940px;
+    position: relative;
+    margin: 0 auto;
 }
 
-.titulo-centralizado {
-    text-align: center;
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0px;
 }
 
-p {
-    text-align: center;
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
 }
 
-#missao {
-    font-size: 20px;
+nav a{
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
 }
 
-em strong {
-    color: #FF0000;
+nav a:hover {
+    color: #C78C19;
+    text-decoration: underline;
 }
 
-.itens {
-    font-style: italic;
+.produtos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
 }
 
-.beneficios {
-    background-color: #FFFFFF;
-    padding: 20px;
-}
-
-ul {
+.produtos li {
     display: inline-block;
+    text-align: center;
+    width: 30%;
     vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
 }
 
-.imagem-beneficios {
-    width: 50%;
+.produtos li:hover {
+    border-color: #C78C19;
+}
+
+.produtos li:active {
+    border-color: #088C19;
+}
+
+.produtos li:hover h2 {
+    font-size: 34px;
+}
+
+.produtos h2 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.produto-descricao {
+    font-size: 18px;
+}
+
+.produto-preco {
+    font-size: 22px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+footer {
+    text-align: center;
+    background: url(./assets/bg.jpg);
+    padding: 40px 0;
+}
+
+.copyright {
+    color: #CCCCCC;
+    font-size: 13px;
+    margin-top: 20px;
 }
